--- a/SharpTools/SptlWebsite/SptlWebsite.csproj
+++ b/SharpTools/SptlWebsite/SptlWebsite.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FileDownloader" Version="1.2.0" />
-		<PackageReference Include="FluentUiBlazorMdiSvgIcons" Version="0.0.1" />
+		<PackageReference Include="FileDownloadBlazor" Version="0.0.3" />
+		<PackageReference Include="FluentUiBlazorMdiSvgIcons" Version="0.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-*" />
