--- a/SharpTools/SptlWebsite/SptlWebsite.csproj
+++ b/SharpTools/SptlWebsite/SptlWebsite.csproj
@@ -15,6 +15,10 @@
 		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-*" />
 		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-*" />
 		<PackageReference Include="QRCodeDecoder-ImageSharp" Version="0.1.0" />
+		<PackageReference Include="YiJingFramework.Annotating.Zhouyi" Version="7.0.1" />
+		<PackageReference Include="YiJingFramework.EntityRelations" Version="4.0.1" />
+		<PackageReference Include="YiJingFramework.Nongli" Version="4.1.0" />
+		<PackageReference Include="YiJingFramework.PrimitiveTypes" Version="4.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -25,15 +29,4 @@
 	  <ProjectReference Include="..\SptlServices\SptlServices.csproj" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <Content Update="Components\ContactInformationComponent.razor">
-	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-	  </Content>
-	  <Content Update="Pages\QrCodeScannerPage.razor">
-	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-	  </Content>
-	  <Content Update="Pages\BytesRepresentationsPage.razor">
-	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-	  </Content>
-	</ItemGroup>
 </Project>
