--- a/SharpTools/SptlWebsite/SptlWebsite.csproj
+++ b/SharpTools/SptlWebsite/SptlWebsite.csproj
@@ -8,9 +8,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="HistoryBlazor" Version="0.0.2" />
-		<PackageReference Include="FileDownloadBlazor" Version="0.0.3" />
-		<PackageReference Include="FluentUiBlazorMdiSvgIcons" Version="0.0.2" />
+		<PackageReference Include="Append.Blazor.Clipboard" Version="1.0.0" />
+		<PackageReference Include="HistoryBlazor" Version="0.0.3" />
+		<PackageReference Include="FileDownloadBlazor" Version="0.0.4" />
+		<PackageReference Include="FluentUiBlazorMdiSvgIcons" Version="0.0.3" />
+		<PackageReference Include="hyjiacan.pinyin4net" Version="4.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-*" />
