--- a/SharpTools/SptlWebsite/SptlWebsite.csproj
+++ b/SharpTools/SptlWebsite/SptlWebsite.csproj
@@ -1,11 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<LangVersion>preview</LangVersion>
 		<ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="Pages\MeihuaYishu\MeihuaYishuPage.razor.js" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Pages\MeihuaYishu\MeihuaYishuPage.razor.js" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Append.Blazor.Clipboard" Version="1.0.0" />
@@ -13,8 +22,8 @@
 		<PackageReference Include="FileDownloadBlazor" Version="0.0.4" />
 		<PackageReference Include="FluentUiBlazorMdiSvgIcons" Version="0.0.3" />
 		<PackageReference Include="hyjiacan.pinyin4net" Version="4.1.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-*" />
 		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-*" />
 		<PackageReference Include="QRCodeDecoder-ImageSharp" Version="0.1.0" />
@@ -28,6 +37,7 @@
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+		<PackageReference Include="System.Private.Uri" Version="4.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -36,6 +46,12 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\SptlServices\SptlServices.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Update="Pages\QrCodeScanner\QrCodeScannerPage.razor">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	  </Content>
 	</ItemGroup>
 
 </Project>
